# tab letter overflow fixed

--- a/assets/landing-delivery.css
+++ b/assets/landing-delivery.css
@@ -26,7 +26,7 @@
     top: -1px;
     left: 50%;
     transform: translateX(-50%);
-    padding: 20px 10px;
+    padding: 20px 20px;
     height: fit-content;
     text-align: center;
     background: #fff;
@@ -140,7 +140,7 @@
 
     .tab {
         font-size: 20px;
-        width: 40%;
+        width: 41%;
         padding: 20px 25px;
     }
 
